completing dark mode function

--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -1,4 +1,17 @@
-[theme="dark"] body {
-  background-color: #343a40 !important;
-  color: #eee;
+html[data-theme="dark"] {
+  --primary-color: #121212;
+  --secondary-color: rgb(34 34 34);
+  --font-color: rgb(229 231 235);
+  --font-color2: #121212;
+  --font-color3: #00e88780;
+  --nav-active: orange;
+  --heading-color: #292922;
+  --bg-img: url(../background/lineBackground.svg);
+  /* postcard skills */
+  --slide-color: #fc5356;
+  --card-color: #20247b;
+  --icon-hover: orange;
+  --box-shadow: rgba(63, 76, 92, 0.397);
+  /* scroll color */
+  --scroll-color: rgb(177, 22, 22);
 }
