--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,10 +33,12 @@ body {
   --slide-color: #20247b;
   --card-color: #fc5356;
   --box-shadow: rgba(0, 0, 0, 0.301);
-  /* social links */
-  --icon-hover: rgb(0, 132, 255);
   /* scroll */
   --scroll-color: #212529;
+  /* copyright */
+  --copy-bg: #f3f5f7;
+  --icon-hover: #00aced;
+  --copy-color: #737373;
 }
 
 /* navbar */
@@ -608,7 +610,7 @@ section#skills {
 
 /* contact */
 section#contact {
-  background-color: var(--secondary-color);
+  background-color: var(--primary-color);
   color: var(--font-color);
 }
 
@@ -650,7 +652,7 @@ section#contact {
 
 .contact-form .form-control {
   border: none;
-  border-bottom: 1px solid var(--slide-color);
+
   background: transparent;
   border-radius: 0;
   padding-left: 0;
@@ -760,20 +762,110 @@ section#contact textarea::placeholder {
   -webkit-transform: rotate(45deg);
   transform: rotate(45deg);
 }
+/* ----- */
 
-.social-links a {
-  color: var(--font-color) !important;
-}
-.social-links a:hover i {
-  color: var(--icon-hover) !important;
-  transform: scale(1.5);
-  transition: transform 330ms ease-in-out;
+/* copyright */
+.site-footer {
+  background-color: var(--copy-bg) !important;
+  padding: 45px 0 20px;
+  font-size: 15px;
+  line-height: 24px;
+  color: var(--copy-color);
 }
 
-section#copyright {
-  background-color: var(--primary-color) !important;
-  color: var(--font-color);
+.site-footer a {
+  color: #737373;
 }
+.site-footer a:hover {
+  color: #3366cc;
+  text-decoration: none;
+}
+
+.site-footer .social-icons {
+  text-align: right;
+}
+.site-footer .social-icons a {
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  margin-left: 6px;
+  margin-right: 0;
+  border-radius: 100%;
+  background-color: #33353d;
+}
+.copyright-text {
+  margin: 0;
+}
+@media (max-width: 991px) {
+  .site-footer [class^="col-"] {
+    margin-bottom: 30px;
+  }
+}
+@media (max-width: 767px) {
+  .site-footer {
+    padding-bottom: 0;
+  }
+  .site-footer .copyright-text,
+  .site-footer .social-icons {
+    text-align: center;
+  }
+}
+.social-icons {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+}
+.social-icons li {
+  display: inline-block;
+  margin-bottom: 4px;
+}
+.social-icons li.title {
+  margin-right: 15px;
+  text-transform: uppercase;
+  color: #96a2b2;
+  font-weight: 700;
+  font-size: 13px;
+}
+.social-icons a {
+  background-color: #eceeef;
+  color: white;
+  font-size: 16px;
+  display: inline-block;
+  line-height: 44px;
+  width: 44px;
+  height: 44px;
+  text-align: center;
+  margin-right: 8px;
+  border-radius: 100%;
+  -webkit-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+.social-icons a:active,
+.social-icons a:focus,
+.social-icons a:hover {
+  color: #fff;
+  background-color: #29aafe;
+}
+.social-icons.size-sm a {
+  line-height: 34px;
+  height: 34px;
+  width: 34px;
+  font-size: 14px;
+}
+
+.social-icons a:hover {
+  background-color: var(--icon-hover);
+}
+@media (max-width: 767px) {
+  .social-icons li.title {
+    display: block;
+    margin-right: 0;
+    font-weight: 600;
+  }
+}
+/* ----- */
+
 /* ----- */
 
 /* scrollbar */
