add techUsed in postcard

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -364,6 +364,29 @@ section#skills {
   padding: 0;
   justify-content: center;
 }
+.postcard .techUsed__icons {
+  display: flex;
+  flex-flow: row wrap;
+  font-size: 14px;
+  margin: 20px 0 0 0;
+  padding: 0;
+  justify-content: start;
+}
+.postcard .techUsed__icons .tag__item {
+  display: inline-block;
+  background: rgba(83, 83, 83, 0.4);
+  border-radius: 3px;
+  padding: 2.5px 10px;
+  margin: 0 5px 5px 0;
+  cursor: default;
+  user-select: none;
+  transition: background-color 0.3s;
+}
+
+.postcard .techUsed__icons .tag__item:hover {
+  background: rgba(83, 83, 83, 0.8);
+  cursor: pointer;
+}
 .postcard .postcard__tagbox .tag__item {
   display: inline-block;
   background: rgba(83, 83, 83, 0.4);
