--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ body {
   /* copyright */
   --copy-bg: #f3f5f7;
   --icon-hover: #00aced;
-  --copy-color: #737373;
+  --copy-color: black;
 }
 
 /* navbar */
@@ -383,8 +383,24 @@ section#skills {
   transition: background-color 0.3s;
 }
 
+.tag__item.htmlIcon:hover {
+  background: #f06529 !important;
+  color: #f3f5f7 !important;
+}
+.tag__item.cssIcon:hover {
+  background: #264de4 !important;
+  color: #f3f5f7 !important;
+}
+.tag__item.bootstrapIcon:hover {
+  background: #0dcaf0 !important;
+  color: #f3f5f7 !important;
+}
+.tag__item.javascriptIcon:hover {
+  background: #f0db4f !important;
+  color: #212529;
+}
+
 .postcard .techUsed__icons .tag__item:hover {
-  background: rgba(83, 83, 83, 0.8);
   cursor: pointer;
 }
 .postcard .postcard__tagbox .tag__item {
@@ -657,28 +673,6 @@ section#contact {
   margin: 0;
 }
 
-.social-share a {
-  width: 40px;
-  height: 40px;
-  line-height: 40px;
-  border-radius: 50%;
-  color: var(--secondary-color);
-  text-align: center;
-  margin-right: 10px;
-}
-.social-share .dribbble {
-  box-shadow: 0 8px 30px -4px rgba(234, 76, 137, 0.5);
-  background-color: #ea4c89;
-}
-.social-share .behance {
-  box-shadow: 0 8px 30px -4px rgba(0, 103, 255, 0.5);
-  background-color: #0067ff;
-}
-.social-share .linkedin {
-  box-shadow: 0 8px 30px -4px rgba(1, 119, 172, 0.5);
-  background-color: #0177ac;
-}
-
 .contact-form .form-control {
   border: none;
 
@@ -704,6 +698,7 @@ section#contact {
 .contact-form .send {
   margin-top: 20px;
 }
+
 section#contact input {
   background-color: var(--secondary-color);
   color: var(--font-color);
@@ -803,7 +798,7 @@ section#contact textarea::placeholder {
 }
 
 .site-footer a {
-  color: #737373;
+  color: black;
 }
 .site-footer a:hover {
   color: #3366cc;
